[package]
name = "lightvgl-sys"
version = "9.2.0"
edition = "2021"
license = "MIT"
authors = ["SakiiCode"]
description = "Raw bindings to the LVGL C library."
homepage = "https://lvgl.io"
repository = "https://github.com/SakiiCode/lightvgl-sys"
readme = "README.md"
categories = ["embedded", "gui", "external-ffi-bindings", "no-std", "graphics"]
keywords = ["lvgl"]
exclude = [
    "vendor/lvgl/demos",
    "vendor/lvgl/tests",
    "vendor/lvgl/examples",
    "vendor/lvgl/docs",
    "vendor/lvgl/scripts",
    "vendor/lvgl/env_support",
]

[dependencies]

[build-dependencies]
bindgen = "0.71.0"
cc = "1.2"

[features]
default = ["library", "raw-bindings"]
library = []
raw-bindings = []
