[package]
name = "lightvgl-sys"
version = "9.3.1"
edition = "2021"
license = "MIT"
authors = ["SakiiCode"]
description = "Raw bindings to the LVGL C library."
homepage = "https://lvgl.io"
repository = "https://github.com/SakiiCode/lightvgl-sys"
readme = "README.md"
categories = ["embedded", "gui", "external-ffi-bindings", "no-std", "graphics"]
keywords = ["lvgl"]
exclude = [
    "vendor/lvgl/demos",
    "vendor/lvgl/tests",
    "vendor/lvgl/examples",
    "vendor/lvgl/docs",
    "vendor/lvgl/scripts",
    "vendor/lvgl/env_support",
]


[package.metadata.docs.rs]
features = ["use-vendored-config"]

[dependencies]

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2"
string-literals = "1.0.1"

[features]
default = ["library", "raw-bindings"]
library = []
raw-bindings = []
use-vendored-config = []
