[package]
name = "lightvgl-sys"
version = "9.5.3"
edition = "2024"
description = "Raw bindings to the LVGL C library."
readme = "README.md"
homepage = "https://lvgl.io"
repository = "https://github.com/SakiiCode/lightvgl-sys"
license = "MIT"
keywords = ["lvgl"]
categories = ["embedded", "external-ffi-bindings", "graphics", "gui", "no-std"]
exclude = [
  "vendor/lvgl/.devcontainer",
  "vendor/lvgl/.github",
  "vendor/lvgl/configs",
  "vendor/lvgl/docs",
  "vendor/lvgl/env_support",
  "vendor/lvgl/examples",
  "vendor/lvgl/scripts",
  "vendor/lvgl/tests",
  "vendor/lvgl/zephyr",
  "vendor/lvgl/demos/music",
  "vendor/lvgl/demos/stress",
  "vendor/lvgl/demos/benchmark",
  "vendor/lvgl/demos/widgets/screenshot1.gif",
]

[package.metadata.docs.rs]
features = ["use-vendored-config"]

[dependencies]

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2"
string-literals = "1.0.1"

[features]
default = ["library", "raw-bindings"]
demos = []
library = []
raw-bindings = []
use-vendored-config = []
